# stm32n6-testing

./: .license_report.md  Cargo.toml  build.bat  build.sh  memory.x
.cargo/: config.toml
src/: main.rs
