[package]
name = "stm32n6-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
], path = "../embassy/embassy-executor" }
embassy-futures = { version = "0.1.2", path = "../embassy/embassy-futures" }
embassy-stm32 = { version = "0.6.0", features = [
    "time-driver-any",
    "stm32n657x0",
    "unstable-pac",
    "defmt",
], path = "../embassy/embassy-stm32" }
embassy-sync = { version = "0.8.0", path = "../embassy/embassy-sync" }
embassy-time = { version = "0.5.1", path = "../embassy/embassy-time" }
panic-halt = { version = "1.0.0" }
# Debugging
defmt = { version = "1.1.0" }
defmt-rtt = { version = "1.2.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-net-driver = { version = "0.2.0", features = [
    "defmt",
], path = "../embassy/embassy-net-driver" }
embassy-net = { version = "0.9.1", features = [
    "defmt",
    "proto-ipv4",
    "udp",
    "tcp",
    "medium-ethernet",
], path = "../embassy/embassy-net" }
static_cell = "2.1.1"
vcell = "0.1.3"
critical-section = "1.2.0"
futures-util = { version = "0.3.30", default-features = false }
heapless = "0.9.3"
embedded-io-async = "0.7.0"


[profile.dev]
codegen-units = 1
debug = 2
incremental = false
lto = false
opt-level = 1
panic = "abort"

[profile.release]
lto = "fat"
panic = "abort"
debug = 2
